docs: add documentation for update
